[package]
name = "minecraft-to-stats"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
async-nats = "0.37.0"
bytes = "1.8.0"
protobuf = "3.7.1"
tokio = {version="1.41.0", features = ["full"]}
futures = "0.3.31"
tracing = "0.1.40"
tracing-subscriber = {  version = "0.3.18", features = ["env-filter"] }
serde = {  version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
uuid = "1.11.0"

[build-dependencies]
protobuf-codegen = "3.7.1"
walkdir = "2.5.0"
